Sun Apr  6 08:52:50 2014  Bugra Barin  <bugrabarin@hotmail.com>

	* dln.c (dln_load): use wchar version to load a library in
	  non-ascii path on Windows.  based on the patch by Bugra Barin
	  <bugrabarin AT hotmail.com> in [ruby-core:61845].  [Bug #9699]

Sat Apr  5 19:36:33 2014  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (d_lite_cmp): should compare with #<.

Sat Apr  5 00:31:21 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/extconf.rb (rl_hook_func_t): check pointer type.
	  [ruby-dev:48089] [Bug #9702]

Fri Apr  4 07:13:44 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func___builtin_setjmp): should not skip
	  flags restoration in RUBY_WERROR_FLAG by `break`.
	  [ruby-dev:48086] [Bug #9698]

Wed Apr  2 21:50:06 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func___builtin_setjmp): __builtin_longjmp() in
	  clang 5.1 uses `void**`, not `jmp_buf`.  [Bug #9692]

Wed Apr  2 20:57:15 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c, gc.h (rb_objspace_each_objects_without_setup):
	  Add a new (hidden) C-API to iterate objspace snapshot.

	  This API is not safe to call any C-APIs in a given callback
	  function. Be careful to use this C-API.

Wed Apr  2 17:43:17 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func___builtin_setjmp): gcc 4.9 disallows a
	  variable as the second argument of __builtin_longjmp().
	  [ruby-core:61800] [Bug #9692]

Wed Apr  2 15:12:18 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* common.mk: Use redmine-2.x url for DeveloperHowto wiki.
	  [ruby-core:60657] [Bug #9511]

Wed Apr  2 11:46:29 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/pathname/lib/pathname.rb (Pathname#join): Fix error with
	  empty args. Reported by ko1 via IRC.

	* test/pathname/test_pathname.rb (TestPathname#test_join): Add the
	  test for above case.

Tue Apr  1 11:39:57 2014  James Edward Gray II  <james@graysoftinc.com>
