@@ -1,3 +1,10 @@
+Mon Apr  7 02:39:48 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* lib/matrix.rb: Add Matrix#cofactor [fix GH-568]
+	  Add first_minor [fix GH-568]
+	  Handle empty diagonal matrix case [fix GH-576]
+	  Patches by gogotanaka
+
 Sun Apr  6 08:52:50 2014  Bugra Barin  <bugrabarin@hotmail.com>
 
 	* dln.c (dln_load): use wchar version to load a library in
